# validmint-api

./: .dockerignore  Cargo.toml  Config.toml  Dockerfile  fly.toml  list.txt
crates/email_core/: Cargo.toml
crates/email_core/src/: deliverability.rs  disposable.rs  dns.rs  heuristics.rs  lib.rs  privacy.rs  validation_pipeline.rs
crates/email_validator_api/: Cargo.toml
crates/email_validator_api/src/: api_handler.rs  auth.rs  config.rs  main.rs  middleware.rs
crates/email_validator_api/src/routes/: auth.rs  fast_validate.rs  fast_validate_dev.rs  health.rs  mod.rs  validate.rs  validate_dev.rs
